--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Churritos Ricos</title>
 
 <!--link a css-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 
 
 <!--link de fuentes-->
