--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--link de css-->
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!--link a fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 
 <body>
-  <nav class="navbar navbar-light" style="background-color: orange;">
+  
     <nav class="navbar navbar-expand-md navbar-dark  nav-grid">
     
         <div class="container-fluid">
@@ -43,7 +43,6 @@
           </div>
         </div>
       </nav>
-    </nav>
 	<div class="container">
 		<h1>Carrito</h1>
 		<hr>
