--- a/pages/envios.html
+++ b/pages/envios.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>envios</title>
 
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -22,9 +22,7 @@
 <body>
     <!--Navegador de menu-->
     <header>
-        <nav class="navbar navbar-light" style="background-color: orange;">
             <nav class="navbar navbar-expand-md navbar-dark  nav-grid">
-            
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"></a>
                   <!-- Boton Responsive -->
@@ -43,7 +41,6 @@
                     </div>
                   </div>
                 </div>
-            </nav>
             </nav>
     </header>
 
