--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=
 , initial-scale=1.0">
 
+<!--Keywords-->
+<meta name="keywords" content="churros, merienda, dulce de leche, ddl, chocolate, dulce, churritos ricos, churritos, rosario, vegano, vegetariano, arandanos, frutos rojos, frio">
+
+<!--Meta description-->
+<meta name="description" content="Somos una empresa familiar dedicada a hacer de tus meriendas, un momento especial">
+
+<!--Favicon-->
+<link rel="icon"type="imagen/png"href="public/logo-canva.png">
+
 <!--titulo de pagina-->
-    <title>Churritos Ricos</title>
+    <title>Churritos Ricos || Los mejores churros de Rosario</title>
 
 <!--link a css-->
     <link rel="stylesheet" href="css/main.css">
@@ -29,7 +38,7 @@
 
 <div class="pagina-completa">
     <header>
-                      <nav class="navbar navbar-expand-md navbar-dark  nav-grid">
+                      <nav class="navbar navbar-expand-md nav-grid">
                     <div class="container-fluid">
                   <a class="navbar-brand" href="#"></a>
                   <!-- Boton Responsive -->
