--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -12,11 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <!-- link iconos-->
     <script src="https://kit.fontawesome.com/44a557b0a3.js" crossorigin="anonymous"></script>
-    
+
+    <!--Keywords-->
+<meta name="keywords" content="churros, merienda, dulce de leche, ddl, chocolate, dulce, churritos ricos, churritos, rosario, compra">
+
+<!--Meta description-->
+<meta name="description" content="Aqui tu pedido de Churritos Ricos">
+
+<!--Favicon-->
+<link rel="icon"type="imagen/png"href="../public/logo-canva.png">
+
     <!-- link a BoostTrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!--link de titulo pagina-->
-    <title>Carrito de compras</title>
+    <title>Carrito de compras || Tu mejor merienda</title>
 </head>
 
 
