--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medios de pago</title>
+    <title>Medios de pago | Churritos Ricos</title>
 
 <link rel="stylesheet" href="../css/main.css">
 
@@ -12,6 +12,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
+    <!--Keywords-->
+<meta name="keywords" content="churros, merienda, dulce de leche, ddl, chocolate, dulce, churritos ricos, churritos, rosario, compra, mercado pago">
+
+<!--Meta description-->
+<meta name="description" content="Nuestros metodos de pago">
+
+<!--Favicon-->
+<link rel="icon"type="imagen/png"href="../public/logo-canva.png">
+
+    <!-- link a BoostTrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!--link de titulo pagina-->
     <!-- link a iconos -->
     <script src="https://kit.fontawesome.com/44a557b0a3.js" crossorigin="anonymous"></script>
 
