--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whatsapp</title>
+    <title>Whatsapp | Pedi directamente</title>
 
+<!--Keywords-->
+<meta name="keywords" content="churros, merienda, dulce de leche, ddl, chocolate, dulce, churritos ricos, churritos, rosario, compra, pedidos">
+
+<!--Meta description-->
+<meta name="description" content="Escribinos y pedi">
+
+<!--Favicon-->
+<link rel="icon"type="imagen/png"href="../public/logo-canva.png">
+
+<!-- link a BoostTrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        
+<!--link de titulo pagina-->
     <link rel="stylesheet" href="../css/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
