--- a/pages/envios.html
+++ b/pages/envios.html
@@ -63,7 +63,7 @@
     <div class="fondo-color-envio">
         <h1 class="titulo-envios">Pedidos con envío</h1>
 
-    <div class="parrafo"> Si querés ordenar por Pedidos Ya, hacé click en el siguiente enlace    
+    <div class="parrafo3"> Si querés ordenar por Pedidos Ya, hacé click en el siguiente enlace    
                <a href="https://www.pedidosya.com.ar/restaurantes/rosario/churritos-ricos-menu?search=churros" target="_blank">
                    <img src="../public/pedidos-ya-logo-70D1FA3532-seeklogo.com.png" alt="">
                </a> 
