--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -107,7 +107,7 @@
     <div class="parrafo">Podés abonar tus pedidos con efectivo, tarjeta de débito, crédito, Mercado Pago y Transferencias.</div>
             
                 
-    <footer class="redessociales-menu">
+    <footer class="redessociales">
         <div>
              <p class="redes">Seguínos en nuestras Redes Sociales</p>
              <ul>
