--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -64,7 +64,7 @@
 
     </main>
 
-    <footer class="redessociales-menu">
+    <footer class="redessociales">
         <div>
              <p class="redes">Seguínos en nuestras Redes Sociales</p>
              <ul>
