--- a/pages/registro.html
+++ b/pages/registro.html
@@ -83,7 +83,7 @@
     
 
     </div> 
-    <footer class="redessociales-menu">
+    <footer class="redessociales">
         <div>
              <p class="redes">Seguínos en nuestras Redes Sociales</p>
              <ul>
@@ -100,8 +100,7 @@
                      <img src="../public/logo-whatsaap.png" alt=""></a>
                  </li>
              </ul>
-
-         </div>
+        </div>
   
     </footer> 
     <!-- Link a Js de Boostrap -->
