--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
     <!-- link a iconos -->
     <script src="https://kit.fontawesome.com/44a557b0a3.js" crossorigin="anonymous"></script>
 
@@ -33,12 +34,13 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
+
 <body>
 <!--barra de navegación-->
 
 <div class="pagina-completa">
     <header>
-                      <nav class="navbar navbar-expand-md nav-grid">
+        <nav class="navbar navbar-expand-md navbar-dark  nav-grid">
                     <div class="container-fluid">
                   <a class="navbar-brand" href="#"></a>
                   <!-- Boton Responsive -->
@@ -89,24 +91,25 @@
         </section >
 
         <section class="redessociales">
-           <div>
-                <p class="redes">Redes Sociales</p>
-                <ul>
-                    <li class="instagram">
-                          <a href="https://www.instagram.com/churritosricos/?hl=es"target="_blank">
-                        <img src="./public/logo-instagram.png" alt=""></a>
-                    </li>
-                    <li class="face">
-                        <a href=" https://www.facebook.com/ChurritosRicos/"target="_blank"> 
-                        <img src="./public/icono-facebook.png" alt=""></a>
-                    </li>
-                    <li class="phone">
-                        <a href="https://wa.me/5491122514635"target="_blank">
-                        <img src="./public/logo-whatsaap.png" alt=""></a>
-                    </li>
-                </ul>
-
+         
+            <div>
+                 <p class="redes">Seguínos en nuestras Redes Sociales</p>
+                 <ul>
+                     <li class="instagram">
+                           <a href="https://www.instagram.com/churritosricos/?hl=es"target="_blank">
+                         <img src="public/logo-instagram.png" alt=""></a>
+                     </li>
+                     <li class="face">
+                         <a href=" https://www.facebook.com/ChurritosRicos/"target="_blank"> 
+                         <img src="public/icono-facebook.png" alt=""></a>
+                     </li>
+                     <li class="phone">
+                         <a href="https://wa.me/5491122514635"target="_blank">
+                         <img src="public/logo-whatsaap.png" alt=""></a>
+                     </li>
+                 </ul>
             </div>
+
         </section>
     </footer>
 </div> 
