--- a/pages/envios.html
+++ b/pages/envios.html
@@ -33,7 +33,7 @@
 <body>
     <!--Navegador de menu-->
     <header>
-        <nav class="navbar navbar-expand-md nav-grid">
+        <nav class="navbar navbar-expand-md navbar-dark  nav-grid">
             
             <div class="container-fluid">
               <a class="navbar-brand" href="#"></a>
@@ -74,7 +74,7 @@
                 </a>
     </div>
 
-    <footer class="redessociales-menu">
+    <footer class="redessociales">
         <div>
              <p class="redes">Seguínos en nuestras Redes Sociales</p>
              <ul>
