--- a/pages/envios.html
+++ b/pages/envios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envios | Pedidos ya - Rappi</title>
+    
 
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,13 +20,16 @@
 <!--Favicon-->
 <link rel="icon"type="imagen/png"href="../public/logo-canva.png">
 
-    <!-- link a BoostTrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!--link de titulo pagina-->
-    <!-- link a iconos -->
-    <script src="https://kit.fontawesome.com/44a557b0a3.js" crossorigin="anonymous"></script>
+<!--titulo de pagina-->
+<title>Envios | Pedidos ya - Rappi</title>
 
-    <!-- link a BoostTrap -->
+<!-- link a BoostTrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+<!-- link a iconos -->
+<script src="https://kit.fontawesome.com/44a557b0a3.js" crossorigin="anonymous"></script>
+
+<!-- link a BoostTrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
