--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -9,6 +9,9 @@
 <!--Keywords-->
 <meta name="keywords" content="churros, merienda, dulce de leche, ddl, chocolate, dulce, churritos ricos, churritos, rosario, compra, pedidos">
 
+<!--link a fonts-->
+<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
 <!--Meta description-->
 <meta name="description" content="Escribinos y pedi">
 
@@ -65,28 +68,20 @@
             </iframe>
 
     </main>
-
     <footer class="redessociales">
-        <div>
-             <p class="redes">Seguínos en nuestras Redes Sociales</p>
-             <ul>
-                 <li class="instagram">
-                       <a href="https://www.instagram.com/churritosricos/?hl=es"target="_blank">
-                     <img src="../public/logo-instagram.png" alt=""></a>
-                 </li>
-                 <li class="face">
-                     <a href=" https://www.facebook.com/ChurritosRicos/"target="_blank"> 
-                     <img src="../public/icono-facebook.png" alt=""></a>
-                 </li>
-                 <li class="phone">
-                     <a href="https://wa.me/5491122514635"target="_blank">
-                     <img src="../public/logo-whatsaap.png" alt=""></a>
-                 </li>
-             </ul>
-
-         </div>
-  
-    </footer>
+      <p class="redes">Seguínos en nuestras Redes Sociales
+      
+       <a href="https://www.instagram.com/churritosricos/?hl=es"target="_blank">
+       <i class="bx bxl-instagram"></i></a>
+      
+       <a href=" https://www.facebook.com/ChurritosRicos/"target="_blank"> 
+       <i class="bx bxl-facebook"></i></a>
+ 
+       <a href="https://wa.me/5491122514635"target="_blank">
+       <i class='bx bxl-whatsapp'></i> </a>
+     </p> 
+   
+</footer>
 </div>
 <!-- Link a Js de Boostrap -->
 
